# employme

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
employme/: cli.py  crawler.py  index.html  interpreter.py  items.py  main.py  me.py
employme/spiders/: __init__.py  analyze.py  article.py  stackoverflow.py
k8/: redis-master-deployment.yaml  web-deployment.yaml  web-service-ip.yaml  web-service.yaml
tests/: test_interpreter.py
